[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aafitrans"
version = "0.0.2"
authors = [
  { name="Prajwel Joseph", email="prajwel.pj@gmail.com" },
]
description = "match coordinate lists"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", 
                "scipy", 
                "scikit-image"]

[project.urls]
"Homepage" = "https://github.com/prajwel/aafitrans"
"Bug Tracker" = "https://github.com/prajwel/aafitrans/issues"
